Fix overflow-x and add new script file for main

--- a/css/section.css
+++ b/css/section.css
@@ -1,3 +1,8 @@
+html {
+    width: 100%;
+}
+
+
 body {
     background-image: url("../img/paper-background.png");
     background-repeat: repeat;
@@ -8,7 +13,8 @@ body {
 .main-body {
       background-color: #160e00;
       background-image: none;
-      overflow-x: hidden;
+      display: flex;
+      /* overflow-x: hidden; */
 }
 
 h1, h2, h3, h4 {
@@ -155,6 +161,10 @@ nav {
     position: absolute;
 }
 
+#overlay-main-image {
+    max-width: 98.85vw;
+}
+
 .main-content {
     display: flex;
     flex-direction: column;
@@ -250,7 +260,7 @@ nav {
 .modal-button {
     position: absolute;
     right: 3%;
-    top: 60%;
+    top: 190%;
     color: white;
     background-color: transparent;
 	text-transform: uppercase;
@@ -483,16 +493,22 @@ nav {
       max-width: 80%;
   }
 
-  .main-body-mobile {
-      overflow-x: hidden;
-    /* overflow-y: scroll; */
-    /* position: relative; */
-} 
-
-  }
+  #overlay-main-image {
+    max-width: 100vw;
+}
 
 
-  @keyframes navLinkFade {
+}
+
+@media screen and (max-width: 1100px) {
+    .nav-links {
+        margin-left: 20vw;
+    }
+
+}
+
+
+@keyframes navLinkFade {
       from {
           opacity: 0;
           transform: translateX(50px);
@@ -501,7 +517,7 @@ nav {
           opacity: 1;
           transform: translateX(0px);
       }
-  }
+}
 
 .toggle .line1 {
     transform: rotate(-45deg) translate(-5px,6px);
